feat(web): add account endpoints and optimized performance counters (#5)